--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -53,10 +53,10 @@
                             </div>
                         </div>
                         <div class="block-first__btn">
-                            <a href="#windowTwo" class="btn-first" data-fslightbox="window1">Пройти опрос и узнать стоимость</a>
+                            <a href="javascript:;" class="btn-first btn-full-width" @click="getCatalog">Скачать каталог</a>
                         </div>
                         <div class="block-first__comm">
-                            Ответьте на 5 простых вопросов и узнайте, сколько будет стоить кроватка, которую вы хотите
+                            Акция до конца недели, ортопедический матрас стоимостью 4900 руб в подарок
                         </div>
                         <div class="block-first__circle-one"></div>
                         <div class="block-first__circle-two"></div>
@@ -567,7 +567,7 @@
                                     Узнайте какая кроватка подходит Вашему ребёнку и получите в подарок классные светильники
                                 </div>
                                 <a href="#windowTwo" class="btn-first" data-fslightbox="window4">
-                                    <span class="d-none d-lg-inline-block">Пройти опрос и получить подарок</span>
+                                    <span class="d-none d-lg-inline-block">Скачать каталог</span>
                                     <span class="d-lg-none">Получить подарок</span>
                                 </a>
                             </div>
@@ -1002,6 +1002,9 @@
             </div>
 
         </div>
+
+        <a href="#windowTwo" data-fslightbox="window6" id="firstWindow"></a>
+        <a href="#windowOne" data-fslightbox="window7" id="secondWindow"></a>
 
         <script src="//api-maps.yandex.ru/2.1.74/?lang=ru_RU"></script>
         <script async src="//www.instagram.com/embed.js"></script>
