--- a/src/scss/elem.scss
+++ b/src/scss/elem.scss
@@ -142,6 +142,7 @@
     transition: all .3s linear;
     background-size: 200% auto;
     background-repeat: no-repeat;
+    text-align: center;
 
     &:hover,
     &:focus,
