--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -218,13 +218,15 @@
     &__btn {
         position: relative;
         z-index: 2;
+        max-width: 355px;
     }
     &__comm {
-        opacity: .7;
-        font-size: 14px;
+        font-size: 18px;
         margin: 30px 0 0;
         text-align: center;
         max-width: 355px;
+        color: var(--red);
+        line-height: 1.4;
     }
     &__circle-one {
         position: absolute;
@@ -381,10 +383,12 @@
             text-align: left;
             max-width: 210px;
             margin: 55px 0 0;
+            font-size: 14px;
         }
         &__btn {
             position: absolute;
             bottom: -36px;
+            width: 100%;
         }
     }
 }
