--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -410,7 +410,7 @@
                             <div class="block-project__left">
                                 <div class="h2 text-white">Мы готовы изготовить кровать по Вашему индивидуальному проекту</div>
                                 <div class="block-project__text">
-                                    Оставьте заявку и расскажите менеджеру подроюно о том, какую кровать хотите создать для своего ребёнка.
+                                    Оставьте заявку и расскажите менеджеру подробно о том, какую кровать хотите создать для своего ребёнка.
                                     <br><br>
                                     А мы воплотим вашу мечту в жизнь!
                                 </div>
