--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -567,8 +567,8 @@
                                     Узнайте какая кроватка подходит Вашему ребёнку и получите в подарок классные светильники
                                 </div>
                                 <a href="#windowTwo" class="btn-first" data-fslightbox="window4">
-                                    <span class="d-none d-lg-inline-block">Скачать каталог</span>
-                                    <span class="d-lg-none">Получить подарок</span>
+                                    <span class="d-none d-lg-inline-block">Пройдите опрос</span>
+                                    <span class="d-lg-none">Пройдите опрос</span>
                                 </a>
                             </div>
                         </div>
