--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -715,9 +715,9 @@
                             <img src="local/img/logo.footer.svg" alt="">
                         </a>
                         <div class="footer-main__req">
-                            ИП Абдуллин Артур Ильнурович<br>
-                            ИНН 026829517154<br>
-                            ОРГН 318774600008922
+							ИП Белявский Роман Юрьевич<br>
+							ИНН 540537972377<br>
+							ОРГН 318547600118510
                         </div>
                         <div class="footer-main__doc">
                             <a href="/" target="_blank">Соглашение</a> / <a href="/" target="_blank">Политика конфиденциальности</a>
