--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1011,21 +1011,7 @@
         <link rel="stylesheet" href="https://cdn.envybox.io/widget/cbk.css">
         <script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=c28eba43838a47581d898079283219e8" charset="UTF-8" async></script>
 
-        <!— Yandex.Metrika counter —>
-        <script type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-        ym(56089993, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-        });
-        </script>
-        <noscript><div><img src="https://mc.yandex.ru/watch/56089993" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-        <!— /Yandex.Metrika counter —>
+        <!— Yandex.Metrika counter —> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter55197436 = new Ya.Metrika({ id:55197436, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/55197436" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!— /Yandex.Metrika counter —>
         
     </body>
 </html>
