--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -5,6 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <title>Amalfi</title>
+
+        <!— Global site tag (gtag.js) - Google Analytics —>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135346301-3"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-135346301-3');
+		</script>
+
     </head>
     <body>
         <div class="position-relative" id="app">
@@ -17,8 +28,8 @@
                         <a href="#contact" class="header-main__addr go-to">
                             м. Дмитровская, Тимирязевская, 2/3
                         </a>
-                        <a href="//wa.me/79660182318" class="header-main__phone" target="_blank">
-                            +7 (966) 018-23-18
+                        <a href="https://wa.me/79660182318" target="_blank" onclick="yaCounter55197436.reachGoal('click_phone'); ga('click', 'phone'); return true;" class="header-main__phone">
+                            +7 (499) 647-75-21
                         </a>
                     </div>
                 </div>
@@ -699,7 +710,9 @@
                                         Чтобы выбрать кровать вживую и убедиться в ее качестве лично
                                     </div>
                                     <div class="block-contact__addr">Москва, Тимирязевская 2/3</div>
-                                    <a href="//wa.me/79660182318" class="block-contact__phone" target="_blank">+7 (966) 018-23-18</a>
+                                    <a href="//wa.me/79660182318" target="_blank" onclick="yaCounter55197436.reachGoal('click_phone'); ga('click', 'phone'); return true;" class="block-contact__phone">
+                                        +7 (499) 647-75-21
+                                    </a>
                                     <a href="mailto:amalfimsk@gmail.com" class="block-contact__email">amalfimsk@gmail.com</a>
                                     <div class="block-contact__time">пн-вск с 10.00 до 20.00</div>
                                 </div>
