--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -16,6 +16,18 @@
 		gtag('config', 'UA-135346301-3');
 		</script>
 
+		<!-- Google Analytics -->
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-135346301-3', 'auto');
+		ga('send', 'pageview');
+		</script>
+		<!-- End Google Analytics -->
+
     </head>
     <body>
         <div class="position-relative" id="app">
@@ -28,7 +40,7 @@
                         <a href="#contact" class="header-main__addr go-to">
                             м. Дмитровская, Тимирязевская, 2/3
                         </a>
-                        <a href="https://wa.me/79660182318" target="_blank" onclick="yaCounter55197436.reachGoal('click_phone'); ga('click', 'phone'); return true;" class="header-main__phone">
+                        <a href="https://wa.me/79660182318" target="_blank" onclick="yaCounter55197436.reachGoal('click_phone'); ga('send','event','phone','click'); return true;" class="header-main__phone">
                             +7 (499) 647-75-21
                         </a>
                     </div>
@@ -710,7 +722,7 @@
                                         Чтобы выбрать кровать вживую и убедиться в ее качестве лично
                                     </div>
                                     <div class="block-contact__addr">Москва, Тимирязевская 2/3</div>
-                                    <a href="//wa.me/79660182318" target="_blank" onclick="yaCounter55197436.reachGoal('click_phone'); ga('click', 'phone'); return true;" class="block-contact__phone">
+                                    <a href="//wa.me/79660182318" target="_blank" onclick="yaCounter55197436.reachGoal('click_phone'); ga('send','event','phone','click'); return true;" class="block-contact__phone">
                                         +7 (499) 647-75-21
                                     </a>
                                     <a href="mailto:amalfimsk@gmail.com" class="block-contact__email">amalfimsk@gmail.com</a>
@@ -728,9 +740,9 @@
                             <img src="local/img/logo.footer.svg" alt="">
                         </a>
                         <div class="footer-main__req">
-							ИП Белявский Роман Юрьевич<br>
-							ИНН 540537972377<br>
-							ОРГН 318547600118510
+							ИП Абдуллин А.И<br>
+                            ИНН 026829517154<br>
+                            ОРГН 318774600008922
                         </div>
                         <div class="footer-main__doc">
                             <a href="/" target="_blank">Соглашение</a> / <a href="/" target="_blank">Политика конфиденциальности</a>
