--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -6,7 +6,7 @@
 
         <title>Amalfi</title>
 
-        <!— Global site tag (gtag.js) - Google Analytics —>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135346301-3"></script>
 		<script>
 		window.dataLayer = window.dataLayer || [];
@@ -35,7 +35,7 @@
                 <div class="container">
                     <div class="header-main__block">
                         <a href="/" class="header-main__logo">
-                            <img src="local/img/logo.svg" alt="">
+                            <img src="local/img/logo.png" alt="">
                         </a>
                         <a href="#contact" class="header-main__addr go-to">
                             м. Дмитровская, Тимирязевская, 2/3
@@ -51,11 +51,11 @@
                     <div class="block-first__block">
                         <div class="block-first__title">
                             <div class="h1">
-                                <span class="h1-line"><span class="h1-line__word">За 7 дней</span></span> изготовим кроватку для вашего малыша
+                                Кроватки из массива бука премиум качества
                             </div>
                         </div>
                         <div class="block-first__desc">
-                            из массива бука Краснодарского края
+                            в наличии и под заказ<br>на 30% дешевле чем у конкурентов
                         </div>
                         <div class="block-first__items">
                             <div class="block-first__item">
@@ -737,7 +737,7 @@
                 <div class="container">
                     <div class="footer-main__block">
                         <a href="/" class="footer-main__logo">
-                            <img src="local/img/logo.footer.svg" alt="">
+                            <img src="local/img/logo.footer.png" alt="">
                         </a>
                         <div class="footer-main__req">
 							ИП Абдуллин А.И<br>
