--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -575,67 +575,91 @@
                                 <div class="swiper-container">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1I9lPOl65c/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-												<div style="padding:16px;">
-													<a href="https://www.instagram.com/p/B1I9lPOl65c/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
-														<div style=" display: flex; flex-direction: row; align-items: center;">
-															<div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
-															<div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
-																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
-																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
-															</div>
-														</div>
-														<div style="padding: 19% 0;"></div>
-														<div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
-														</div>
-														<div style="padding-top: 8px;">
-															<div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> Посмотреть эту публикацию в Instagram</div>
-														</div>
-													</a>
-												</div>
-											</blockquote>
+                                            <blockquote
+                                                class="instagram-media"
+                                                data-instgrm-permalink="https://www.instagram.com/p/B2OSemfFo8U/"
+                                                data-instgrm-version="12"
+                                                style="background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"
+                                            >
+                                                <div style="padding:16px;">
+                                                    <a
+                                                        href="https://www.instagram.com/p/B2OSemfFo8U/"
+                                                        style="background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
+                                                        target="_blank"
+                                                    >
+                                                        <div style="display: flex; flex-direction: row; align-items: center;">
+                                                            <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
+                                                            <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+                                                                <div style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
+                                                                <div style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div style="padding: 19% 0;"></div>
+                                                        <div style="display:block; height:50px; margin:0 auto 12px; width:50px;"></div>
+                                                        <div style="padding-top: 8px;">
+                                                            <div style="color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">Посмотреть эту публикацию в Instagram</div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            </blockquote>
                                         </div>
                                         <div class="swiper-slide">
-                                            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1d560tlHUN/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-												<div style="padding:16px;">
-													<a href="https://www.instagram.com/p/B1I9lPOl65c/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
-														<div style=" display: flex; flex-direction: row; align-items: center;">
-															<div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
-															<div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
-																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
-																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
-															</div>
-														</div>
-														<div style="padding: 19% 0;"></div>
-														<div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
-														</div>
-														<div style="padding-top: 8px;">
-															<div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> Посмотреть эту публикацию в Instagram</div>
-														</div>
-													</a>
-												</div>
-											</blockquote>
+                                            <blockquote
+                                                class="instagram-media"
+                                                data-instgrm-permalink="https://www.instagram.com/p/B73ZET7FnhX/"
+                                                data-instgrm-version="12"
+                                                style="background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"
+                                            >
+                                                <div style="padding:16px;">
+                                                    <a
+                                                        href="https://www.instagram.com/p/B73ZET7FnhX/"
+                                                        style="background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
+                                                        target="_blank"
+                                                    >
+                                                        <div style="display: flex; flex-direction: row; align-items: center;">
+                                                            <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
+                                                            <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+                                                                <div style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
+                                                                <div style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div style="padding: 19% 0;"></div>
+                                                        <div style="display:block; height:50px; margin:0 auto 12px; width:50px;"></div>
+                                                        <div style="padding-top: 8px;">
+                                                            <div style="color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">Посмотреть эту публикацию в Instagram</div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            </blockquote>
                                         </div>
                                         <div class="swiper-slide">
-                                            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1_W-_TlzxX/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-												<div style="padding:16px;">
-													<a href="https://www.instagram.com/p/B1I9lPOl65c/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
-														<div style=" display: flex; flex-direction: row; align-items: center;">
-															<div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
-															<div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
-																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
-																<div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
-															</div>
-														</div>
-														<div style="padding: 19% 0;"></div>
-														<div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
-														</div>
-														<div style="padding-top: 8px;">
-															<div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> Посмотреть эту публикацию в Instagram</div>
-														</div>
-													</a>
-												</div>
-											</blockquote>
+                                            <blockquote
+                                                class="instagram-media"
+                                                data-instgrm-permalink="https://www.instagram.com/p/B1d4BB9lJB0/"
+                                                data-instgrm-version="12"
+                                                style="background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"
+                                            >
+                                                <div style="padding:16px;">
+                                                    <a
+                                                        href="https://www.instagram.com/p/B1d4BB9lJB0/"
+                                                        style="background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
+                                                        target="_blank"
+                                                    >
+                                                        <div style="display: flex; flex-direction: row; align-items: center;">
+                                                            <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
+                                                            <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+                                                                <div style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div>
+                                                                <div style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div style="padding: 19% 0;"></div>
+                                                        <div style="display:block; height:50px; margin:0 auto 12px; width:50px;"></div>
+                                                        <div style="padding-top: 8px;">
+                                                            <div style="color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">Посмотреть эту публикацию в Instagram</div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            </blockquote>
                                         </div>
                                     </div>
                                 </div>
