--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>Amalfi</title>
+        <title>Albero</title>
 
     </head>
     <body>
@@ -161,7 +161,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Алиса</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price">34 900 р.</div>
+                                                <div class="products-slider__price">36 900 р.</div>
                                             </div>
                                         </div>
                                     </div>
@@ -172,7 +172,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Амели</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price">48 900 р.</div>
+                                                <div class="products-slider__price">59 900 р.</div>
                                             </div>
                                         </div>
                                     </div>
@@ -205,7 +205,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Твикс</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price">46 900 р.</div>
+                                                <div class="products-slider__price">54 900 р.</div>
                                             </div>
                                         </div>
                                     </div>
@@ -216,7 +216,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Баунти стандартная</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price-old">36 900 р.</div>
+                                                <div class="products-slider__price-old">39 900 р.</div>
                                                 <div class="products-slider__price">29 900 р.</div>
                                             </div>
                                         </div>
@@ -228,7 +228,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Дори</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price-old">25 900 р.</div>
+                                                <div class="products-slider__price-old">29 900 р.</div>
                                                 <div class="products-slider__price">18 900 р.</div>
                                             </div>
                                         </div>
@@ -240,7 +240,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Изабель с лестницей-камодом</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price-old">82 900 р.</div>
+                                                <div class="products-slider__price-old">87 900 р.</div>
                                                 <div class="products-slider__price">71 900 р.</div>
                                             </div>
                                         </div>
@@ -252,7 +252,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Марс</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price-old">52 900 р.</div>
+                                                <div class="products-slider__price-old">57 900 р.</div>
                                                 <div class="products-slider__price">41 900 р.</div>
                                             </div>
                                         </div>
@@ -264,7 +264,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Скаут Чердак</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price-old">47 900 р.</div>
+                                                <div class="products-slider__price-old">52 900 р.</div>
                                                 <div class="products-slider__price">36 900 р.</div>
                                             </div>
                                         </div>
@@ -276,7 +276,7 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Скаут</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price-old">54 900 р.</div>
+                                                <div class="products-slider__price-old">58 900 р.</div>
                                                 <div class="products-slider__price">43 900 р.</div>
                                             </div>
                                         </div>
@@ -288,8 +288,8 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Сенди</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price-old">35 900 р.</div>
-                                                <div class="products-slider__price">28 900 р.</div>
+                                                <div class="products-slider__price-old">38 900 р.</div>
+                                                <div class="products-slider__price">29 900 р.</div>
                                             </div>
                                         </div>
                                     </div>
@@ -315,7 +315,7 @@
                     <div class="container">
                         <div class="block-reason__title">
                             <div class="h2">
-                                <span class="h2-line"><span class="h2-line__word">6 причин</span></span> по которым родители выбирают для своих детей кроватки Амалфи
+                                <span class="h2-line"><span class="h2-line__word">6 причин</span></span> по которым родители выбирают для своих детей кроватки Albero
                             </div>
                         </div>
                     </div>
@@ -414,7 +414,7 @@
                         <div class="position-relative">
                             <div class="block-team__title">
                                 <div class="h2">
-                                    <span class="h2-line"><span class="h2-line__word">Команда</span></span> Амалфи
+                                    <span class="h2-line"><span class="h2-line__word">Команда</span></span> Albero
                                 </div>
                             </div>
                             <div class="block-team__desc">Входим в ТОП-5 производителей кроваток домиков</div>
@@ -428,11 +428,11 @@
                                             <div class="team-slider__info">
                                                 <div class="team-slider__name">
                                                     Артур Ильнурович<br>
-                                                    Основатель компании “Amalfi”
+                                                    Основатель компании “Albero”
                                                 </div>
                                                 <hr class="team-slider__line">
                                                 <div class="team-slider__text">
-                                                    Воодушевился этим названием когда отдыхал на морском побережье Италии и увидел прекрасный город Амальфи
+                                                    Воодушевился этим названием когда отдыхал на морском побережье Италии и увидел прекрасный город Albero
                                                 </div>
                                             </div>
                                         </div>
