--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -56,9 +56,9 @@
                         <div class="block-first__btn">
                             <a href="javascript:;" class="btn-first btn-full-width" @click="getCatalog">Скачать каталог</a>
                         </div>
-                        <div class="block-first__comm">
+                        <!-- <div class="block-first__comm">
                             Акция до конца недели, ортопедический матрас стоимостью 4900 руб в подарок
-                        </div>
+                        </div> -->
                         <div class="block-first__circle-one"></div>
                         <div class="block-first__circle-two"></div>
                         <a href="#advantages" class="block-first__down go-to">листайте вниз</a>
@@ -98,7 +98,7 @@
                                 </div>
                                 <div class="swiper-slide main-slider__slide">
                                     <img src="local/uploads/main.slider8.jpg" class="main-slider__img" alt="">
-                                    <div class="main-slider__name">Изабель с лестницей-камодом</div>
+                                    <div class="main-slider__name">Изабель с лестницей-комодом</div>
                                 </div>
                                 <div class="swiper-slide main-slider__slide">
                                     <img src="local/uploads/main.slider9.jpg" class="main-slider__img" alt="">
@@ -238,7 +238,7 @@
                                             <img class="products-slider__img" src="local/uploads/products8.jpg" alt="">
                                         </div>
                                         <div class="products-slider__info">
-                                            <div class="products-slider__name">Изабель с лестницей-камодом</div>
+                                            <div class="products-slider__name">Изабель с лестницей-комодом</div>
                                             <div class="products-slider__price-block">
                                                 <div class="products-slider__price-old">87 900 р.</div>
                                                 <div class="products-slider__price">71 900 р.</div>
@@ -252,14 +252,14 @@
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Марс</div>
                                             <div class="products-slider__price-block">
-                                                <div class="products-slider__price-old">57 900 р.</div>
-                                                <div class="products-slider__price">41 900 р.</div>
+                                                <div class="products-slider__price-old">49 900 р.</div>
+                                                <div class="products-slider__price">36 900 р.</div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide products-slider__slide">
                                         <div class="products-slider__pict">
-                                            <img class="products-slider__img" src="local/uploads/products10.jpg" alt="">
+                                            <img class="products-slider__img" src="local/uploads/products11.jpg" alt="">
                                         </div>
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Скаут Чердак</div>
@@ -271,7 +271,7 @@
                                     </div>
                                     <div class="swiper-slide products-slider__slide">
                                         <div class="products-slider__pict">
-                                            <img class="products-slider__img" src="local/uploads/products11.jpg" alt="">
+                                            <img class="products-slider__img" src="local/uploads/products10.jpg" alt="">
                                         </div>
                                         <div class="products-slider__info">
                                             <div class="products-slider__name">Скаут</div>
